<resources>
    <string name="app_name">EmployeeManagementSystem</string>
    <string name="new_employee">New Employee</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="choose_menu">Choose a Menu Option</string>
    <string name="view_all_employees">View All Employees</string>
    <string name="remove_employee">Remove Employee</string>
    <string name="update_employee">Update Employee</string>
    <string name="add_employee">Add Employee</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="add_salary">Salary</string>
    <string name="add_name">Name</string>
    <string name="add_phone_no">Phone Number</string>
    <string name="add_position">Position</string>
    <string name="add_email">Email</string>
    <string name="enter_employee_id">Enter Your Employee Id</string>
    <string name="settings">Settings</string>
    <string name="return_mm">Main Menu</string>
    <string name="search_hint">Search Employees</string>
    <string name="search_view">Enter search</string>
</resources>